Fixed capitilization error for changing style. fixed contact list spacing added email address link

--- a/tronStyle.css
+++ b/tronStyle.css
@@ -104,6 +104,7 @@ ul {
 .contact-item {
     display: flex;
     align-items: center;
+    margin-bottom: 12px;
 }
 
 .contact-list a {
